--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
-    "date-fns": "^3.3.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
